CHROMIUM: egl/surfaceless: Use double-buffered pbuffer configuration

Some dEQP tests rely on a double-buffered configuration to work correctly.

BUG=b:27656575
BUG=chromium:606472
TEST=Ran dEQP GLES2, GLES3, GLES31 on Cyan. 74 more GLES3 tests now pass. No regressions.

Signed-off-by: Tomasz Figa <tfiga@chromium.org>